# ai-speech

./: pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
data_access/: large_language_model_repository.py
presentation/: speech_to_text.ipynb
service/: compliance_check_service.py
