[tool.poetry]
name = "speech-to-text"
version = "0.1.0"
description = ""
authors = ["kokazaki03 <22257091+kokazaki03@users.noreply.github.com>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.12"
azure-cognitiveservices-speech = "^1.37.0"
python-dotenv = "^1.0.1"
openai = "^1.30.5"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
